--- a/notebooks/part_2_spot_detection_tutorial_beginner.ipynb
+++ b/notebooks/part_2_spot_detection_tutorial_beginner.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -83,12 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image layer 'spots' at 0x29d2cef10>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# add the spots image to the viewer\n",
-    "\n"
+    "viewer.add_image(spots)\n"
    ]
   },
   {
@@ -102,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,15 +151,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Image layer 'spots_filtered' at 0x29d2ce4c0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use the gaussian_high_pass function to filter the spots image\n",
-    "\n",
+    "spots_filtered = gaussian_high_pass(spots)\n",
     "\n",
     "# add the filtered image to the viewer\n",
-    "# hint: set the opacity < 1 in order to see the layers underneath\n"
+    "# hint: set the opacity < 1 in order to see the layers underneath\n",
+    "viewer.add_image(spots_filtered)"
    ]
   },
   {
@@ -166,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,12 +258,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Points layer 'Points' at 0x2a63cffa0>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# detect the spots\n",
-    "\n",
+    "called_spots = detect_spots(spots_filtered)\n",
+    "viewer.add_points(called_spots[0], size=called_spots[1])\n",
     "\n",
     "# add the detected spots to the viewer as a Points layer\n"
    ]
@@ -271,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
